--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Dependencies
-      run: sudo dnf install -y libadwaita-devel gtk4-devel make
+      run: sudo dnf install -y libadwaita-devel gtk4-devel make cargo gettext-devel
 
     - name: Build
       run: cargo build --release
