--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,22 +22,22 @@ jobs:
 
     - name: Make Zip
       run: |
-        mkdir BoxBuddy-${{github.ref}}
-        mv target/release/boxbuddy-rs BoxBuddy-${{github.ref}}
-        mv scripts/install.sh BoxBuddy-${{github.ref}}
-        mv scripts/uninstall.sh BoxBuddy-${{github.ref}}
-        mv -r po BoxBuddy-${{github.ref}}/
-        mv icons/io.github.dvlv.boxbuddyrs.svg BoxBuddy-${{github.ref}}/
-        mv io.github.dvlv.boxbuddyrs.desktop BoxBuddy-${{github.ref}}/
-        zip -r BoxBuddy-${{github.ref}}.zip BoxBuddy-${{github.ref}}
+        mkdir BoxBuddy-${{github.ref_name}}
+        mv target/release/boxbuddy-rs BoxBuddy-${{github.ref_name}}
+        mv scripts/install.sh BoxBuddy-${{github.ref_name}}
+        mv scripts/uninstall.sh BoxBuddy-${{github.ref_name}}
+        mv -r po BoxBuddy-${{github.ref_name}}/
+        mv icons/io.github.dvlv.boxbuddyrs.svg BoxBuddy-${{github.ref_name}}/
+        mv io.github.dvlv.boxbuddyrs.desktop BoxBuddy-${{github.ref_name}}/
+        zip -r BoxBuddy-${{github.ref_name}}.zip BoxBuddy-${{github.ref_name}}
 
       
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: BoxBuddy-${{github.ref}}.zip
-        asset_name: BoxBuddy-${{github.ref}}.zip
+        file: BoxBuddy-${{github.ref_name}}.zip
+        asset_name: BoxBuddy-${{github.ref_name}}.zip
         tag: ${{ github.ref }}
         overwrite: true
         body: "This is my release text"
