--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build:
+    permissions: read-all
     name: Publish binaries
     runs-on: ubuntu-latest
     container: fedora:39
@@ -31,7 +32,6 @@ jobs:
         mv io.github.dvlv.boxbuddyrs.desktop BoxBuddy-${{github.ref_name}}/
         zip -r BoxBuddy-${{github.ref_name}}.zip BoxBuddy-${{github.ref_name}}
 
-      
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
