--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    permissions: read-all
+    permissions: write-all
     name: Publish binaries
     runs-on: ubuntu-latest
     container: fedora:39
