--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Check version consistency
+      run: bash scripts/version-check.sh
+
+    - name: Check tag name matches
+      run: if [ "${{github.ref_name}}" = "$(scripts/version-check.sh)" ]; then exit 0; else exit 1; fi
+
     - name: Dependencies
       run: sudo dnf install -y libadwaita-devel gtk4-devel make cargo gettext-devel zip
 
