screenshots, finishing off debrpm work, docs

--- a/io.github.dvlv.boxbuddyrs.desktop
+++ b/io.github.dvlv.boxbuddyrs.desktop
@@ -5,3 +5,4 @@ Type=Application
 Icon=io.github.dvlv.boxbuddyrs
 Categories=Utility;
 Comment=A Graphical Application For Managing Distroboxes
+MimeType=application/x-rpm;application/vnd.debian.binary-package
