--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "boxbuddy-rs"
-version = "2.2.14"
+version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-adw = { version = "0.7.0", package = "libadwaita", features = ["v1_4"] }
-gettext-rs = { version = "0.7.1", features = ["gettext-system"] }
-gtk = { version = "0.9.2", package = "gtk4", features = ["v4_12"] }
+adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
+gettext-rs = "0.7.0"
+gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
