--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 adw = { version = "0.7.1", package = "libadwaita", features = ["v1_4"] }
+async-channel = "2.3.1"
 gettext-rs = { version = "0.7.1", features = ["gettext-system"] }
 gtk = { version = "0.9.5", package = "gtk4", features = ["v4_12"] }
