--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,7 +11,7 @@ jobs:
       contents: write
     name: Publish binaries
     runs-on: ubuntu-latest
-    container: fedora:39
+    container: fedora:40
 
     steps:
     - uses: actions/checkout@v3
@@ -26,7 +26,7 @@ jobs:
       run: sudo dnf install -y libadwaita-devel gtk4-devel make cargo gettext-devel zip
 
     - name: Build
-      run: cargo build --release
+      run: GETTEXT_SYSTEM=true cargo build --release
 
     - name: Make Zip
       run: |
